@@ -24,8 +24,13 @@ New user-visible features
 
 Bugs fixed
 ----------
+ - bug 1284 - ./test.py performance tests do not exist
+ - bug 1463 - ./test.py --example should automatically detect the path
  - bug 1485 - Setting global properties in config file (raw text) does
               not have any effect
+ - bug 1493 - test.py --list should show the test type default tip
+ - bug 1494 - test.py --constrain doesn't work
+ - bug 1495 - test.py claims test passed when no test was run
 
 Known issues
 ------------
